v2ray/all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v-usa-tunnel-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v-usa-tunnel
  template:
    metadata:
      labels:
        app: v-usa-tunnel
    spec:
      containers:
      - name: v-usa
        image: v2fly/v2fly-core:v5.1.0
        imagePullPolicy: IfNotPresent
        command: ["v2ray"]
        args: ["run", "-c", "/etc/v2ray/config.json"]
        resources:
          requests:
            memory: "100Mi"
          limits:
            memory: "100Mi"
        ports:
        volumeMounts:
        - name: v-usa-tunnel-conf
          mountPath: /etc/v2ray/config.json
          subPath: config.json
      volumes:
      - name: v-usa-tunnel-conf
        configMap:
          name: v-usa-tunnel
